--- a/Contents/Resources/CodaCompletion.plist
+++ b/Contents/Resources/CodaCompletion.plist
@@ -1579,6 +1579,20 @@
 		</dict>
 		<dict>
 			<key>ID</key>
+			<string>hasOwnProperty</string>
+			<key>String</key>
+			<string>hasOwnProperty</string>
+			<key>SelectionRange</key>
+			<string>{15, 0}</string>
+			<key>PostString</key>
+			<string>()</string>
+			<key>Parameters</key>
+			<array>
+				<string>prop</string>
+			</array>
+		</dict>
+		<dict>
+			<key>ID</key>
 			<string>implements</string>
 			<key>String</key>
 			<string>implements</string>
@@ -2192,6 +2206,34 @@
 			<key>Parameters</key>
 			<array>
 				<string>elements</string>
+			</array>
+		</dict>
+		<dict>
+			<key>ID</key>
+			<string>querySelector</string>
+			<key>String</key>
+			<string>querySelector</string>
+			<key>SelectionRange</key>
+			<string>{14, 0}</string>
+			<key>PostString</key>
+			<string>()</string>
+			<key>Parameters</key>
+			<array>
+				<string>selectors</string>
+			</array>
+		</dict>
+		<dict>
+			<key>ID</key>
+			<string>querySelectorAll</string>
+			<key>String</key>
+			<string>querySelectorAll</string>
+			<key>SelectionRange</key>
+			<string>{17, 0}</string>
+			<key>PostString</key>
+			<string>()</string>
+			<key>Parameters</key>
+			<array>
+				<string>selectors</string>
 			</array>
 		</dict>
 		<dict>
@@ -3629,6 +3671,12 @@
 		</dict>
 		<dict>
 			<key>ID</key>
+			<string>body</string>
+			<key>String</key>
+			<string>body</string>
+		</dict>
+		<dict>
+			<key>ID</key>
 			<string>border</string>
 			<key>String</key>
 			<string>border</string>
@@ -4244,6 +4292,12 @@
 			<string>hash</string>
 			<key>String</key>
 			<string>hash</string>
+		</dict>
+		<dict>
+			<key>ID</key>
+			<string>head</string>
+			<key>String</key>
+			<string>head</string>
 		</dict>
 		<dict>
 			<key>ID</key>
@@ -5387,6 +5441,12 @@
 		</dict>
 		<dict>
 			<key>ID</key>
+			<string>textContent</string>
+			<key>String</key>
+			<string>textContent</string>
+		</dict>
+		<dict>
+			<key>ID</key>
 			<string>textDecoration</string>
 			<key>String</key>
 			<string>textDecoration</string>
@@ -5576,12 +5636,6 @@
 			<string>Base</string>
 			<key>String</key>
 			<string>Base</string>
-		</dict>
-		<dict>
-			<key>ID</key>
-			<string>Body</string>
-			<key>String</key>
-			<string>Body</string>
 		</dict>
 		<dict>
 			<key>ID</key>
